# dndmaster

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package.json  start-backend.sh  start-frontend.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  dragonweaver.db  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  characters.py  health.py  memory.py  orchestration.py  progression.py  saves.py  sessions.py  settings.py  stories.py  timeline.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: auth.py  character.py  memory.py  orchestration.py  progression.py  save.py  session.py  settings.py  story.py  timeline.py
backend/app/services/: __init__.py  embedding.py  gm_response.py  memory_store.py  rag_context.py  session_event_broker.py  tts_audio.py  tts_chain.py  voice_connection_registry.py  voice_signal_broker.py
backend/tests/: conftest.py  test_auth.py  test_characters.py  test_memory.py  test_memory_postgres.py  test_orchestration.py  test_progression.py  test_saves.py  test_session_event_broker.py  test_session_voice_stream.py  test_sessions.py  test_settings.py  test_story_timeline.py  test_voice_signal_broker.py
docs/: draft.md  implementation-plan.md  mvp-timeline-ui-spec.md  spec-gap-analysis.md  verification-protocol.md
frontend/: index.html  package-lock.json  package.json
(+39 files in other folders)
